syntax = "proto3";

import "ferrors/v1/ferrors.proto";
import "telempb/telem.proto";

package ts.v1;

service IteratorService {
    rpc Iterate(stream IteratorRequest) returns (stream IteratorResponse) {}
}

message IteratorRequest {
    int32 command = 1;
    int64 stamp = 2;
    int64 span = 3;
    telem.TimeRange bounds = 4;
    repeated uint32 keys = 6;
}

message IteratorResponse {
    int32 variant = 1;
    int32 command = 2;
    Frame frame = 3;
    int32 node_key =43;
    bool ack = 5;
    int32 seq_num = 6;
    ferrors.v1.ErrorPayload error = 7;
}


service RelayService {
    rpc Relay(stream RelayRequest) returns (stream RelayResponse);
}

message RelayRequest {
    repeated uint32 keys = 1;
}

message RelayResponse {
    Frame frame = 1;
    ferrors.v1.ErrorPayload error = 2;
}

message Frame {
    repeated uint32 keys = 1;
    repeated telem.Series series = 2;
}

service WriterService {
    rpc Write(stream WriterRequest) returns (stream WriterResponse) {}
}

message WriterRequest {
    int32 command = 1;
    WriterConfig config = 2;
    Frame frame = 3;
}

message WriterConfig {
    repeated uint32 keys = 1;
    int64 start = 2;
}

message WriterResponse {
    int32 command = 1;
    bool ack = 2;
    int32 seq_num = 3;
    int32 node_key = 4;
    ferrors.v1.ErrorPayload error = 5;
    int64 time_stamp = 6;
}

